--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,19 @@
 img {
   width: 100%;
 }
+.container {
+  margin-top: 50px;
+}
+
+.col-12 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+button {
+  margin-left: 10px;
+}
 
 .btn-info {
-  height: 50px;
+  padding: 5px;
 }
